--- a/capsule-install-playbook.yml
+++ b/capsule-install-playbook.yml
@@ -4,6 +4,7 @@
   - vars.yml
   vars:
     capsule_install: true
+    tower_install: true
     capsule_upgrade: false
   remote_user: root
   roles:
