--- a/vars.sample.yml
+++ b/vars.sample.yml
@@ -4,6 +4,9 @@ capsule_version: 6.4
 # Applicable only for Capsule install
 satellite_org_label: changeme
 satellite_activation_key: changeme
+satellite_hostname: changeme
+tower_install: true
+ansible_install: false
 skip_katello_agent: false
 update_server: false
 capsule_cname: none
